Fix #295 [Template] Form editors can't open template generated files

--- a/templates/template-application-angular/src/main/resources/template-application-angular/extensions/menu.extensionpoint.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/extensions/menu.extensionpoint.template
@@ -1,4 +1,4 @@
 {
-	'description': 'Extension Point for the {{projectName}} Menu Providers',
-	'name': 'launchpad-{{projectName}}-menu'
+	"description": "Extension Point for the {{projectName}} Menu Providers",
+	"name": "launchpad-{{projectName}}-menu"
 }
