--- a/templates/template-application-angular/src/main/resources/template-application-angular/extensions/tiles.extensionpoint.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/extensions/tiles.extensionpoint.template
@@ -1,4 +1,4 @@
 {
-	'description': 'Extension Point for the {{extensionName}} Tiles Providers',
-	'name': 'launchpad-{{extensionName}}-tiles'
+	"description": "Extension Point for the {{extensionName}} Tiles Providers",
+	"name": "launchpad-{{extensionName}}-tiles"
 }
