--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/extensions/perspective/perspective.extension.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/extensions/perspective/perspective.extension.template
@@ -1,9 +1,9 @@
 {
-	'description': '${perspectiveName} perspective',
+	"description": "${perspectiveName} perspective",
 #if($includeLaunchpad)
-	'extensionPoint': 'launchpad-${extensionName}-perspective',
+	"extensionPoint": "launchpad-${extensionName}-perspective",
 #else
-	'extensionPoint': 'launchpad-${launchpadName}-perspective',
+	"extensionPoint": "launchpad-${launchpadName}-perspective",
 #end
-	'module': '${projectName}/ui/${perspectiveName}/extensions/perspective/perspective.js'
+	"module": "${projectName}/ui/${perspectiveName}/extensions/perspective/perspective.js"
 }
