--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/manage/extensions/view.extensionpoint.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/manage/extensions/view.extensionpoint.template
@@ -1,4 +1,4 @@
 {
-	'description': 'Extension Point for the {{perspectiveName}} View Providers',
-	'name': 'launchpad-{{perspectiveName}}-view'
+	"description": "Extension Point for the {{perspectiveName}} View Providers",
+	"name": "launchpad-{{perspectiveName}}-view"
 }
