--- a/templates/template-application-angular/src/main/resources/template-application-angular/extensions/perspective.extensionpoint.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/extensions/perspective.extensionpoint.template
@@ -1,4 +1,4 @@
 {
-	'description': 'Extension Point for the {{extensionName}} Perspective Providers',
-	'name': 'launchpad-{{extensionName}}-perspective'
+	"description": "Extension Point for the {{extensionName}} Perspective Providers",
+	"name": "launchpad-{{extensionName}}-perspective"
 }
