--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/manage/extensions/entity.extension.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/manage/extensions/entity.extension.template
@@ -1,5 +1,5 @@
 {
-	'description': '{{name}} view',
-	'extensionPoint': 'launchpad-{{perspectiveName}}-view',
-	'module': '{{projectName}}/ui/{{perspectiveName}}/views/{{fileName}}/extensions/view.js'
+	"description": "{{name}} view",
+	"extensionPoint": "launchpad-{{perspectiveName}}-view",
+	"module": "{{projectName}}/ui/{{perspectiveName}}/views/{{fileName}}/extensions/view.js"
 }
