--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/master/extensions/entity-view-master.extension.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/master/extensions/entity-view-master.extension.template
@@ -1,5 +1,5 @@
 {
-	'description': '{{perspectiveName}} view',
-	'extensionPoint': 'launchpad-{{perspectiveName}}-{{name}}-view',
-	'module': '{{projectName}}/ui/{{perspectiveName}}/views/master/{{name}}/master/extensions/view.js'
+	"description": "{{perspectiveName}} view",
+	"extensionPoint": "launchpad-{{perspectiveName}}-{{name}}-view",
+	"module": "{{projectName}}/ui/{{perspectiveName}}/views/master/{{name}}/master/extensions/view.js"
 }
