--- a/templates/template-application-angular/src/main/resources/template-application-angular/api/entity.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/api/entity.js.template
@@ -1,7 +1,8 @@
 var rs = require('http/v3/rs');
-var dao = require('${projectName}/data/dao/${name}');
+var dao = require('${projectName}/data/dao/${perspectiveName}/${name}');
 var http = require('${projectName}/api/http');
 
+#if($type != 'REPORT')
 rs.service()
 	.resource('')
 		.get(function(ctx, request) {
@@ -49,3 +50,17 @@ rs.service()
 			}
 		})
 .execute();
+#else
+rs.service()
+	.resource('')
+		.get(function(ctx, request) {
+			var queryOptions = {};
+			var parameters = request.getParameterNames();
+			for (var i = 0; i < parameters.length; i ++) {
+				queryOptions[parameters[i]] = request.getParameter(parameters[i]);
+			}
+			var entities = dao.list(queryOptions);
+			http.sendResponseOk(entities);
+		})
+.execute();
+#end
