--- a/templates/template-application-angular/src/main/resources/template-application-angular/data/application.schema.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/data/application.schema.template
@@ -1,47 +1,57 @@
 {
-    'schema': {
-        'structures': [
+    "schema": {
+        "structures": [
 #foreach ($model in $models)
+#if($model.type != "REPORT")
 #if($foreach.isFirst())
             {
 #else
  {
 #end
-                'name': '${model.dataName}',
-                'type': 'TABLE',
-                'columns': [
+                "name": "${model.dataName}",
+                "type": "TABLE",
+                "columns": [
 #foreach ($property in $model.properties)
 #if($foreach.isFirst())
                     {
 #else
  {
 #end
-                        'type': '${property.dataType}',
+                        "type": "${property.dataType}",
 #if($property.dataLength)
-                        'length': ${property.dataLength},
+                        "length": ${property.dataLength},
 #end
 #if($property.dataPrimaryKey)
-                        'primaryKey': true,
+                        "primaryKey": true,
 #end
 #if($property.dataAutoIncrement)
-                        'identity': true,
+                        "identity": true,
 #end
 #if($property.dataPrecision)
-                        'precision': '${property.dataPrecision}',
+                        "precision": "${property.dataPrecision}",
 #end
 #if($property.dataScale)
-                        'scale': '${property.dataScale}',
+                        "scale": "${property.dataScale}",
 #end
 #if($property.dataNotNull)
 #else
-                        'nullable': true,
+                        "nullable": true,
 #end
-                        'name': '${property.dataName}'
+                        "name": "${property.dataName}"
                     }#if($foreach.hasNext),#end
 #end
 ]
             }#if($foreach.hasNext),#end
+#else
+ {
+                "name": "${model.dataName}",
+                "type": "VIEW",
+                "columns": [{
+                    "query": "${model.dataQuery}"
+                }]
+            }#if($foreach.hasNext),#end
 #end
-        ]
+#end
+]
     }
 }
