--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/extensions/perspective.extension.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/extensions/perspective.extension.template
@@ -1,5 +1,5 @@
 {
 	"description": "Home perspective",
 	"extensionPoint": "launchpad-{{extensionName}}-perspective",
-	"module": "{{projectName}}/extensions/perspective.js"
+	"module": "{{projectName}}/ui/extensions/perspective.js"
 }
