--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/manage/controller.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/manage/controller.js.template
@@ -44,13 +44,13 @@ angular.module('page')
 }])
 .controller('PageController', function ($scope, $http, $messageHub) {
 
-	var api = '/services/v3/js/${projectName}/api/${name}.js';
+	var api = '/services/v3/js/${projectName}/api/${perspectiveName}/${name}.js';
 #foreach ($property in $properties)
 #if($property.widgetType == "DROPDOWN")
 #if($property.widgetService && "$property.widgetService" != "")
 	var ${property.name.toLowerCase()}OptionsApi = '${property.widgetService}';
 #else
-	var ${property.name.toLowerCase()}OptionsApi = '/services/v3/js/${projectName}/api/${property.relationshipEntityName}.js';
+	var ${property.name.toLowerCase()}OptionsApi = '/services/v3/js/${projectName}/api/${property.relationshipEntityPerspectiveName}/${property.relationshipEntityName}.js';
 #end
 #end
 #end
