[Templates] Fix locations #296

--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/extensions/tile/tile.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/extensions/tile/tile.js.template
@@ -8,7 +8,7 @@
  * SAP - initial API and implementation
  */
 
-var dao = require('${projectName}/data/dao/${name}.js')
+var dao = require('${projectName}/data/dao/${perspectiveName}/${name}.js')
 
 exports.getTile = function() {
 	return {
