--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/list/extensions/view.extension.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/list/extensions/view.extension.template
@@ -1,5 +1,5 @@
 {
 	"description": "{{name}} view",
-	"extensionPoint": "launchpad-{{projectName}}-view",
+	"extensionPoint": "launchpad-{{extensionName}}-{{perspectiveName}}-view",
 	"module": "{{projectName}}/ui/{{perspectiveName}}/views/{{name}}/extensions/view.js"
 }
