--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/extensions/entity-view.extensionpoint.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/extensions/entity-view.extensionpoint.template
@@ -1,4 +1,4 @@
 {
 	"description": "Extension Point for the {{perspectiveName}} - {{name}} Master View Providers",
-	"name": "launchpad-{{perspectiveName}}-{{name}}-view"
+	"name": "launchpad-{{extensionName}}-{{perspectiveName}}-{{name}}-view"
 }
