--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/extensions/view.extension.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/extensions/view.extension.template
@@ -1,5 +1,5 @@
 {
 	"description": "{{perspectiveName}} view",
-	"extensionPoint": "launchpad-{{perspectiveName}}-view",
+	"extensionPoint": "launchpad-{{extensionName}}-{{perspectiveName}}-view",
 	"module": "{{projectName}}/ui/{{perspectiveName}}/views/master/{{name}}/extensions/view.js"
 }
