--- a/pom.xml
+++ b/pom.xml
@@ -412,6 +412,7 @@
 		<module>releng/trial-all</module>
 		<module>releng/server-javascript</module>
 		<module>releng/server-database</module>
+		<module>releng/embedded-all</module>
 	</modules>
 
 </project>
