--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/extensions/tile/tile.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/extensions/tile/tile.js.template
@@ -32,7 +32,7 @@ exports.getTile = function() {
 		'icon': 'life-ring',
  #end
 		'location': '/services/v3/web/${projectName}/ui/${perspectiveName}/index.html',
-		'count': dao.count(),
+		'count': dao.customDataCount(),
 #if($perspectiveOrder)
 		'order': '${perspectiveOrder}'
 #else
