--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/details/controller.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/details/controller.js.template
@@ -90,12 +90,39 @@ angular.module('page')
 #end
 #end
 
-	function load() {
-		${dollar}http.get(api + '?#foreach ($property in $properties)#if($property.relationshipType == "COMPOSITION" && $property.relationshipCardinality == "1_n")${property.name}#end#end=' + $scope.masterEntityId)
+	$scope.dataPage = 1;
+	$scope.dataCount = 0;
+	$scope.dataOffset = 0;
+	$scope.dataLimit = 10;
+
+	$scope.getPages = function() {
+		return new Array($scope.dataPages);
+	};
+
+	$scope.nextPage = function() {
+		if ($scope.dataPage < $scope.dataPages) {
+			${dollar}scope.loadPage(${dollar}scope.dataPage + 1);
+		}
+	};
+
+	$scope.previousPage = function() {
+		if ($scope.dataPage > 1) {
+			${dollar}scope.loadPage(${dollar}scope.dataPage - 1);
+		}
+	};
+
+	$scope.loadPage = function(pageNumber) {
+		$scope.dataPage = pageNumber;
+		${dollar}http.get(api + '/count')
 		.success(function(data) {
-			$scope.data = data;
+			$scope.dataCount = data;
+			$scope.dataPages = Math.ceil($scope.dataCount / $scope.dataLimit);
+			${dollar}http.get(api + '?#foreach ($property in $properties)#if($property.relationshipType == "COMPOSITION" && $property.relationshipCardinality == "1_n")${property.name}#end#end=' + $scope.masterEntityId + '&${dollar}offset=' + ((pageNumber - 1) * ${dollar}scope.dataLimit) + '&${dollar}limit=' + ${dollar}scope.dataLimit)
+			.success(function(data) {
+				$scope.data = data;
+			});
 		});
-	}
+	};
 
 	$scope.openNewDialog = function() {
 		$scope.actionType = 'new';
@@ -116,7 +143,7 @@ angular.module('page')
 	};
 
 	$scope.close = function() {
-		load();
+		$scope.loadPage($scope.dataPage);
 		toggleEntityModal();
 	};
 
@@ -128,7 +155,7 @@ angular.module('page')
 #end
 		${dollar}http.post(api, JSON.stringify(${dollar}scope.entity))
 		.success(function(data) {
-			load();
+			$scope.loadPage($scope.dataPage);
 			toggleEntityModal();
 			$messageHub.messageEntityModified();
 		}).error(function(data) {
@@ -149,9 +176,8 @@ angular.module('page')
 		${dollar}http.put(api + '/' + ${dollar}scope.entity.${property.name}, JSON.stringify(${dollar}scope.entity))
 #end
 #end
-
 		.success(function(data) {
-			load();
+			$scope.loadPage($scope.dataPage);
 			toggleEntityModal();
 			$messageHub.messageEntityModified();
 		}).error(function(data) {
@@ -166,7 +192,7 @@ angular.module('page')
 #end
 #end
 		.success(function(data) {
-			load();
+			$scope.loadPage($scope.dataPage);
 			toggleEntityModal();
 			$messageHub.messageEntityModified();
 		}).error(function(data) {
@@ -199,7 +225,7 @@ angular.module('page')
 #end
 #end
 
-	$messageHub.onEntityRefresh(load);
+	$messageHub.onEntityRefresh($scope.loadPage($scope.dataPage));
 #foreach ($property in $properties)
 #if($property.widgetType == "DROPDOWN" && $property.relationshipEntityName != "")
 	${dollar}messageHub.on${property.relationshipEntityName}Modified(${property.name.toLowerCase()}OptionsLoad);
@@ -209,8 +235,8 @@ angular.module('page')
 #foreach ($property in $properties)
 #if($property.relationshipType == "COMPOSITION" && $property.relationshipCardinality == "1_n")
 	${dollar}messageHub.on${property.relationshipEntityName}Selected(function(event) {
-		$scope.masterEntityId = event.data.id
-		load();
+		$scope.masterEntityId = event.data.id;
+		$scope.loadPage($scope.dataPage);
 	});
 #end
 #end
