--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/details/index.html.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/details/index.html.template
@@ -32,7 +32,7 @@
 			</thead>
 			<tbody>
 				<tr ng-repeat="next in data">
-					<td>{{$index + 1}}</td>
+					<td>{{(dataPage - 1) * dataLimit + $index + 1}}</td>
 #foreach ($property in $properties) 
 #if($property.widgetIsMajor && $property.relationshipType != "COMPOSITION")
 #if($property.widgetType == "DROPDOWN")
@@ -135,7 +135,23 @@
 			</div>
 		</div>
 	</div>
-
+	<nav class="text-center">
+	    <ul class="pagination">
+	        <li class="page-item" ng-click="previousPage()" ng-class="{disabled: dataPage == 1}">
+	            <a class="page-link" href="#" aria-label="Previous">
+	                <span aria-hidden="true">&laquo;</span>
+	                <span class="sr-only">Previous</span>
+	            </a>
+	        </li>
+	        <li class="page-item" ng-repeat="next in getPages() track by $index" ng-click="loadPage($index + 1)" ng-class="{active: $index + 1 == dataPage}"><a class="page-link" href="#">{{$index + 1}}</a></li>
+	        <li class="page-item" ng-click="nextPage()" ng-class="{disabled: dataPage == dataPages}">
+	            <a class="page-link" href="#" aria-label="Next">
+	                <span aria-hidden="true">&raquo;</span>
+	                <span class="sr-only">Next</span>
+	            </a>
+	        </li>
+	    </ul>
+	</nav>
 
 	<script type="text/javascript" src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
 	<script type="text/javascript" src="/services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js" async></script>
