--- a/ide/ui/ide-group-all/pom.xml
+++ b/ide/ui/ide-group-all/pom.xml
@@ -159,5 +159,10 @@
 		 	<artifactId>dirigible-ide-ui-registry</artifactId>
 		 	<version>3.2.5-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-ide-ui-plugins</artifactId>
+		 	<version>3.2.5-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
