[Templates] OpenUI5 refactoring

--- a/templates/template-application-openui5/src/main/resources/template-application-openui5/api/launchpad/perspectives.js.template
+++ b/templates/template-application-openui5/src/main/resources/template-application-openui5/api/launchpad/perspectives.js.template
@@ -12,12 +12,14 @@ var extensions = require('core/v3/extensions');
 var response = require('http/v3/response');
 
 var perspectives = [];
-var perspectiveExtensions = extensions.getExtensions('shell-{{extensionName}}-perspective');
-for (var i=0; i<perspectiveExtensions.length; i++) {
+
+var perspectiveExtensions = extensions.getExtensions('launchpad-{{extensionName}}-perspective');
+for (var i = 0; perspectiveExtensions !== null && i < perspectiveExtensions.length; i++) {
     var perspectiveExtension = require(perspectiveExtensions[i]);
     var perspective = perspectiveExtension.getPerspective();
     perspectives.push(perspective);
 }
+
 perspectives.sort(function(p, n) {
 	return parseInt(p.order, 0) - parseInt(n.order, 0);
 });
