--- a/templates/template-application-openui5/src/main/resources/template-application-openui5/data/application.schema.template
+++ b/templates/template-application-openui5/src/main/resources/template-application-openui5/data/application.schema.template
@@ -1,26 +1,57 @@
 {
     "schema": {
         "structures": [
-        {{#dataModels_}}
+#foreach ($model in $models)
+#if($model.type != "REPORT")
+#if($foreach.isFirst())
             {
-                "name": "{{value.dataName}}",
+#else
+ {
+#end
+                "name": "${model.dataName}",
                 "type": "TABLE",
-                "columns": 
-                [
-                {{#value.properties_}}
+                "columns": [
+#foreach ($property in $model.properties)
+#if($foreach.isFirst())
                     {
-                        "name": "{{value.dataName}}",
-                        "type": "{{value.dataType}}",
-                        "length": "{{value.dataLength}}",
-                        "primaryKey": "{{value.dataPrimaryKey}}",
-                        "identity": "{{value.dataAutoIncrement}}",
-                        "precision": "{{value.dataPrecision}}",
-                        "scale": "{{value.dataScale}}"
-                    }{{^last}},{{/last}}
-                {{/value.properties_}}
-                ]
-            }{{^last}},{{/last}}
-        {{/dataModels_}}
-        ]
+#else
+ {
+#end
+                        "type": "${property.dataType}",
+#if($property.dataLength)
+                        "length": ${property.dataLength},
+#end
+#if($property.dataPrimaryKey)
+                        "primaryKey": true,
+#end
+#if($property.dataAutoIncrement)
+                        "identity": true,
+#end
+#if($property.dataPrecision)
+                        "precision": "${property.dataPrecision}",
+#end
+#if($property.dataScale)
+                        "scale": "${property.dataScale}",
+#end
+#if($property.dataNotNull)
+#else
+                        "nullable": true,
+#end
+                        "name": "${property.dataName}"
+                    }#if($foreach.hasNext),#end
+#end
+]
+            }#if($foreach.hasNext),#end
+#else
+ {
+                "name": "${model.dataName}",
+                "type": "VIEW",
+                "columns": [{
+                    "query": "${model.dataQuery}"
+                }]
+            }#if($foreach.hasNext),#end
+#end
+#end
+]
     }
 }
