--- a/templates/template-application-openui5/src/main/resources/template-application-openui5/project.json
+++ b/templates/template-application-openui5/src/main/resources/template-application-openui5/project.json
@@ -1,1 +1,8 @@
-{"guid":"template-application-openui5","repository":{"type":"git","branch":"master","url":"https://github.com/dirigiblelabs/template-v3-application-openui5.git"}}
+{
+	"guid": "template-application-openui5",
+	"repository": {
+		"type": "git",
+		"branch": "master",
+		"url": "https://github.com/dirigiblelabs/template-v3-application-openui5.git"
+	}
+}
