--- a/templates/template-application-openui5/src/main/resources/template-application-openui5/ui/perspectives/views/manage/controller/Navigation.controller.js.template
+++ b/templates/template-application-openui5/src/main/resources/template-application-openui5/ui/perspectives/views/manage/controller/Navigation.controller.js.template
@@ -25,7 +25,7 @@ sap.ui.define([
 			
 			toolPage.setSideExpanded(false);
 
-			oModel.loadData("../../js/{{projectName}}/api/shell/perspectives.js"); // to load data to the model
+			oModel.loadData("/services/v3/js/{{projectName}}/api/launchpad/perspectives.js"); // to load data to the model
 			myView.setModel(oModel);
 			myView.setModel(oEntitiesModel, "entities");
 
