test dependencies fixes

--- a/modules/engines/engine-job/pom.xml
+++ b/modules/engines/engine-job/pom.xml
@@ -88,7 +88,13 @@
             <artifactId>dirigible-repository-local</artifactId>
             <version>3.2.5-SNAPSHOT</version>
             <scope>test</scope>
-        </dependency>    	
+        </dependency>
+        <dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-repository-master</artifactId>
+			<version>3.2.5-SNAPSHOT</version>
+			<scope>test</scope>
+    	</dependency>
     </dependencies>
 
 </project>
