--- a/modules/core/core-scheduler/pom.xml
+++ b/modules/core/core-scheduler/pom.xml
@@ -83,6 +83,18 @@
 			<version>3.2.5-SNAPSHOT</version>
 			<scope>test</scope>
     	</dependency>
+    	<dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-repository-local</artifactId>
+			<version>3.2.5-SNAPSHOT</version>
+			<scope>test</scope>
+    	</dependency>
+    	<dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-repository-master</artifactId>
+			<version>3.2.5-SNAPSHOT</version>
+			<scope>test</scope>
+    	</dependency>
     </dependencies>
 
 </project>
