--- a/releng/sap-all/pom.xml
+++ b/releng/sap-all/pom.xml
@@ -64,6 +64,11 @@
 		 	<artifactId>dirigible-repository-database</artifactId>
 		 	<version>3.3.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-repository-master</artifactId>
+		 	<version>3.3.0-SNAPSHOT</version>
+		</dependency>
 		
 		<!-- Database -->
 		<dependency>
