--- a/releng/trial-all/pom.xml
+++ b/releng/trial-all/pom.xml
@@ -237,6 +237,11 @@
 		 	<artifactId>dirigible-repository-local</artifactId>
 		 	<version>3.3.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-repository-master</artifactId>
+		 	<version>3.3.0-SNAPSHOT</version>
+		</dependency>
 
 		<!-- Database -->
 		<dependency>
