no master for database repository case

--- a/releng/sap-all/src/main/resources/dirigible.properties
+++ b/releng/sap-all/src/main/resources/dirigible.properties
@@ -14,3 +14,9 @@ DIRIGIBLE_PRODUCT_VERSION=3.2
 DIRIGIBLE_PRODUCT_TYPE=SAP Cloud Platform Neo
 DIRIGIBLE_INSTANCE_NAME=cloud
 
+DIRIGIBLE_REPOSITORY_PROVIDER=database
+DIRIGIBLE_REPOSITORY_DATABASE_DATASOURCE_NAME=DefaultDB
+DIRIGIBLE_DATABASE_PROVIDER=managed
+DIRIGIBLE_DATABASE_DATASOURCE_NAME_DEFAULT=DefaultDB
+DIRIGIBLE_CMS_PROVIDER=managed
+
