--- a/modules/commons/commons-config/src/test/resources/dirigible.properties
+++ b/modules/commons/commons-config/src/test/resources/dirigible.properties
@@ -9,8 +9,5 @@
 #
 
 # General
-DIRIGIBLE_PRODUCT_NAME="Eclipse Dirigible";
-DIRIGIBLE_PRODUCT_VERSION=3.1.1
-DIRIGIBLE_PRODUCT_TYPE=all
-DIRIGIBLE_INSTANCE_NAME=local
-
+DIRIGIBLE_PRODUCT_NAME=${project.title}
+DIRIGIBLE_PRODUCT_VERSION=${project.version}
