--- a/releng/sap-all/src/main/resources/dirigible.properties
+++ b/releng/sap-all/src/main/resources/dirigible.properties
@@ -9,14 +9,14 @@
 #
 
 # General
-DIRIGIBLE_PRODUCT_NAME="Eclipse Dirigible";
-DIRIGIBLE_PRODUCT_VERSION=3.2
-DIRIGIBLE_PRODUCT_TYPE=SAP Cloud Platform Neo
-DIRIGIBLE_INSTANCE_NAME=cloud
-
+DIRIGIBLE_PRODUCT_NAME=${project.title}
+DIRIGIBLE_PRODUCT_VERSION=${project.version}
+DIRIGIBLE_PRODUCT_TYPE=all
+DIRIGIBLE_INSTANCE_NAME=SAP Cloud Platform Neo
 DIRIGIBLE_REPOSITORY_PROVIDER=database
 DIRIGIBLE_REPOSITORY_DATABASE_DATASOURCE_NAME=DefaultDB
 DIRIGIBLE_DATABASE_PROVIDER=managed
 DIRIGIBLE_DATABASE_DATASOURCE_NAME_DEFAULT=DefaultDB
 DIRIGIBLE_CMS_PROVIDER=managed
+DIRIGIBLE_BPM_PROVIDER=internal
 
