--- a/releng/server-database/src/main/resources/dirigible.properties
+++ b/releng/server-database/src/main/resources/dirigible.properties
@@ -9,9 +9,9 @@
 #
 
 # General
-DIRIGIBLE_PRODUCT_NAME="Eclipse Dirigible";
-DIRIGIBLE_PRODUCT_VERSION=3.2
+DIRIGIBLE_PRODUCT_NAME=${project.title}
+DIRIGIBLE_PRODUCT_VERSION=${project.version}
 DIRIGIBLE_PRODUCT_TYPE=database
-DIRIGIBLE_INSTANCE_NAME=server
+DIRIGIBLE_INSTANCE_NAME=server-database
 DIRIGIBLE_HOME_URL=/services/v3/web/ide-database/index.html
 DIRIGIBLE_DATABASE_PROVIDER=local
