--- a/pom.xml
+++ b/pom.xml
@@ -353,6 +353,7 @@
 	</dependencies>
 
 	<properties>
+		<project.title>Eclipse Dirigible</project.title>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
