--- a/releng/sap-all/pom.xml
+++ b/releng/sap-all/pom.xml
@@ -36,6 +36,12 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<resources>
+	        <resource>
+	          <directory>src/main/resources</directory>
+	          <filtering>true</filtering>
+	        </resource>
+	    </resources>
 	</build>
 
 	<dependencies>
