--- a/releng/server-all/src/main/resources/dirigible.properties
+++ b/releng/server-all/src/main/resources/dirigible.properties
@@ -9,8 +9,8 @@
 #
 
 # General
-DIRIGIBLE_PRODUCT_NAME="Eclipse Dirigible";
-DIRIGIBLE_PRODUCT_VERSION=3.2
+DIRIGIBLE_PRODUCT_NAME=${project.title}
+DIRIGIBLE_PRODUCT_VERSION=${project.version}
 DIRIGIBLE_PRODUCT_TYPE=all
 DIRIGIBLE_INSTANCE_NAME=server
 DIRIGIBLE_DATABASE_PROVIDER=local
