--- a/releng/server-javascript/src/main/resources/dirigible.properties
+++ b/releng/server-javascript/src/main/resources/dirigible.properties
@@ -9,9 +9,9 @@
 #
 
 # General
-DIRIGIBLE_PRODUCT_NAME="Eclipse Dirigible";
-DIRIGIBLE_PRODUCT_VERSION=3.2
+DIRIGIBLE_PRODUCT_NAME=${project.title}
+DIRIGIBLE_PRODUCT_VERSION=${project.version}
 DIRIGIBLE_PRODUCT_TYPE=javascript
-DIRIGIBLE_INSTANCE_NAME=server
+DIRIGIBLE_INSTANCE_NAME=server-javascript
 DIRIGIBLE_DATABASE_PROVIDER=local
 
