--- a/releng/trial-all/pom.xml
+++ b/releng/trial-all/pom.xml
@@ -186,8 +186,13 @@
 					</execution>
 				</executions>
 			</plugin>
-			
 		</plugins>
+		<resources>
+	        <resource>
+	          <directory>src/main/resources</directory>
+	          <filtering>true</filtering>
+	        </resource>
+	    </resources>
 	</build>
 
 	<dependencies>
