#326 Relative paths fixes

--- a/modules/services/service-core/src/main/resources/dirigible-core.properties
+++ b/modules/services/service-core/src/main/resources/dirigible-core.properties
@@ -8,4 +8,4 @@
 # SAP - initial API and implementation
 #
 
-DIRIGIBLE_HOME_URL=/services/v3/web/ide/index.html
+DIRIGIBLE_HOME_URL=services/v3/web/ide/
