--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/manage/controller.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/manage/controller.js.template
@@ -1,6 +1,17 @@
 #set($dollar = '$' )
 angular.module('page', ['ngAnimate', 'ui.bootstrap']);
 angular.module('page')
+.factory('httpRequestInterceptor', function () {
+	return {
+		request: function (config) {
+			config.headers['X-Requested-With'] = 'Fetch';
+			return config;
+		}
+	};
+})
+.config(['$httpProvider', function($httpProvider) {
+	$httpProvider.interceptors.push('httpRequestInterceptor');
+}])
 .factory('$messageHub', [function(){
 	var messageHub = new FramesMessageHub();
 
@@ -44,13 +55,13 @@ angular.module('page')
 }])
 .controller('PageController', function ($scope, $http, $messageHub) {
 
-	var api = '/services/v3/js/${projectName}/api/${perspectiveName}/${name}.js';
+	var api = '../../../../../../../../services/v3/js/${projectName}/api/${perspectiveName}/${name}.js';
 #foreach ($property in $properties)
 #if($property.widgetType == "DROPDOWN")
 #if($property.widgetService && "$property.widgetService" != "")
 	var ${property.name.toLowerCase()}OptionsApi = '${property.widgetService}';
 #else
-	var ${property.name.toLowerCase()}OptionsApi = '/services/v3/js/${projectName}/api/${property.relationshipEntityPerspectiveName}/${property.relationshipEntityName}.js';
+	var ${property.name.toLowerCase()}OptionsApi = '../../../../../../../../services/v3/js/${projectName}/api/${property.relationshipEntityPerspectiveName}/${property.relationshipEntityName}.js';
 #end
 #end
 #end
