--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-list/details/index.html.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-list/details/index.html.template
@@ -7,9 +7,9 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
-	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/bootstrap.min.css">
-	<link type="text/css" rel="stylesheet" href="/services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css">
-	<link type="image/png" rel="shortcut icon" href="/services/v3/web/resources/images/favicon.png" />
+	<link type="text/css" rel="stylesheet" href="../../../../../../../../../../services/v3/core/theme/bootstrap.min.css">
+	<link type="text/css" rel="stylesheet" href="../../../../../../../../../../services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css">
+	<link type="image/png" rel="shortcut icon" href="../../../../../../../../../../services/v3/web/resources/images/favicon.png" />
 </head>
 
 <body ng-controller="PageController">
@@ -115,14 +115,14 @@
 	    </ul>
 	</nav>
 
-	<script type="text/javascript" src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
-	<script type="text/javascript" src="/services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js" async></script>
-	<script type="text/javascript" src="/services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
-	<script type="text/javascript" src="/services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
+	<script type="text/javascript" src="../../../../../../../../../../services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
+	<script type="text/javascript" src="../../../../../../../../../../services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js" async></script>
+	<script type="text/javascript" src="../../../../../../../../../../services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
+	<script type="text/javascript" src="../../../../../../../../../../services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
 #if($includeLaunchpad)
-	<script type="text/javascript" src="/services/v3/web/${projectName}/ui/resources/js/message-hub.js"></script>
+	<script type="text/javascript" src="../../../../../../../../../../services/v3/web/${projectName}/ui/resources/js/message-hub.js"></script>
 #else
-	<script type="text/javascript" src="/services/v3/web/${launchpadName}/ui/resources/js/message-hub.js"></script>
+	<script type="text/javascript" src="../../../../../../../../../../services/v3/web/${launchpadName}/ui/resources/js/message-hub.js"></script>
 #end
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-animate.min.js"></script>
 	<script type="text/javascript" src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.3.js"></script>
