--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/index.html.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/index.html.template
@@ -20,20 +20,20 @@
     <title>${brand}</title>
 
 	<!-- Twitter Bootstrap with Theme Support -->
-	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/bootstrap.min.css">
+	<link type="text/css" rel="stylesheet" href="../../../../../../../../../services/v3/core/theme/bootstrap.min.css">
 
 		<!-- GoldenLayout with Theme Support -->
-	<link type="text/css" rel="stylesheet" href="/services/v3/web/resources/goldenlayout/1.5.9/goldenlayout-base.css" />
-	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/goldenlayout-theme.css" />
+	<link type="text/css" rel="stylesheet" href="../../../../../../../../../services/v3/web/resources/goldenlayout/1.5.9/goldenlayout-base.css" />
+	<link type="text/css" rel="stylesheet" href="../../../../../../../../../services/v3/core/theme/goldenlayout-theme.css" />
 	
 	<!-- Custom IDE Styles -->
-	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/ide.css" />
-	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/master.css" />
+	<link type="text/css" rel="stylesheet" href="../../../../../../../../../services/v3/core/theme/ide.css" />
+	<link type="text/css" rel="stylesheet" href="../../../../../../../../../services/v3/core/theme/master.css" />
 	
 	<!-- FontAwesome icon set -->
-    <link type="text/css" href="/services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link type="text/css" href="../../../../../../../../../services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
     
-	<link rel="shortcut icon" type="image/png" href="/services/v3/web/resources/images/favicon.png" />
+	<link rel="shortcut icon" type="image/png" href="../../../../../../../../../services/v3/web/resources/images/favicon.png" />
 </head>
 
 <body ng-app="workbench" ng-controller="WorkbenchController">
@@ -44,27 +44,27 @@
 	<!-- div class="statusbar" status-bar>${message}</div -->
 	
 	<!-- jQuery -->
-	<script type="text/javascript" src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
+	<script type="text/javascript" src="../../../../../../../../../services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
 	
 	<!-- Twitter Bootstrap with Theme Support -->
-	<script type="text/javascript" src="/services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js" async></script>
+	<script type="text/javascript" src="../../../../../../../../../services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js" async></script>
 	
 	<!-- AngularJS -->
-	<script type="text/javascript" src="/services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
-	<script type="text/javascript" src="/services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
+	<script type="text/javascript" src="../../../../../../../../../services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
+	<script type="text/javascript" src="../../../../../../../../../services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
 
 	<!-- GoldenLayout with Theme Support -->
-	<script type="text/javascript" src="/services/v3/web/resources/goldenlayout/1.5.9/goldenlayout.min.js"></script>
+	<script type="text/javascript" src="../../../../../../../../../services/v3/web/resources/goldenlayout/1.5.9/goldenlayout.min.js"></script>
 
 #if($includeLaunchpad)
-	<script type="text/javascript" src="/services/v3/web/${projectName}/ui/resources/js/message-hub.js"></script>	
-	<script type="text/javascript" src="/services/v3/web/${projectName}/ui/resources/js/ui-layout.js"></script>
-	<script type="text/javascript" src="/services/v3/web/${projectName}/ui/resources/js/ui-core-ng-modules.js"></script>
+	<script type="text/javascript" src="../../../../../../../../../services/v3/web/${projectName}/ui/resources/js/message-hub.js"></script>	
+	<script type="text/javascript" src="../../../../../../../../../services/v3/web/${projectName}/ui/resources/js/ui-layout.js"></script>
+	<script type="text/javascript" src="../../../../../../../../../services/v3/web/${projectName}/ui/resources/js/ui-core-ng-modules.js"></script>
 
 #else
-	<script type="text/javascript" src="/services/v3/web/${launchpadName}/ui/resources/js/message-hub.js"></script>	
-	<script type="text/javascript" src="/services/v3/web/${launchpadName}/ui/resources/js/ui-layout.js"></script>
-	<script type="text/javascript" src="/services/v3/web/${launchpadName}/ui/resources/js/ui-core-ng-modules.js"></script>
+	<script type="text/javascript" src="../../../../../../../../../services/v3/web/${launchpadName}/ui/resources/js/message-hub.js"></script>	
+	<script type="text/javascript" src="../../../../../../../../../services/v3/web/${launchpadName}/ui/resources/js/ui-layout.js"></script>
+	<script type="text/javascript" src="../../../../../../../../../services/v3/web/${launchpadName}/ui/resources/js/ui-core-ng-modules.js"></script>
 #end
 
 	<script type="text/javascript">
@@ -99,9 +99,9 @@
 			};
 
 #if($includeLaunchpad)
-			${dollar}http.get('/services/v3/js/${projectName}/api/launchpad/views.js?extensionPoint=launchpad-${extensionName}-${perspectiveName}-${name}-view')
+			${dollar}http.get('../../../../../../../../../services/v3/js/${projectName}/api/launchpad/views.js?extensionPoint=launchpad-${extensionName}-${perspectiveName}-${name}-view&pathSegments=6')
 #else
-			${dollar}http.get('/services/v3/js/${launchpadName}/api/launchpad/views.js?extensionPoint=launchpad-${extensionName}-${perspectiveName}-${name}-view')
+			${dollar}http.get('../../../../../../../../../services/v3/js/${launchpadName}/api/launchpad/views.js?extensionPoint=launchpad-${extensionName}-${perspectiveName}-${name}-view&pathSegments=6')
 #end
 			.success(function(views) {
 				var master = [];
