--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/master/extensions/view.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/master/extensions/view.js.template
@@ -8,7 +8,7 @@
  * SAP - initial API and implementation
  */
 
-exports.getView = function() {
+exports.getView = function(relativePath) {
 	return {
 		'id': '{{name}}',
 		'name': '{{menuLabel}}',
@@ -16,6 +16,6 @@ exports.getView = function() {
 		'factory': 'frame',
 		'region': 'center-top',
 		'type': 'master',
-		'link': '/services/v3/web/{{projectName}}/ui/{{perspectiveName}}/views/master/{{name}}/master/index.html'
+		'link': relativePath + 'services/v3/web/{{projectName}}/ui/{{perspectiveName}}/views/master/{{name}}/master/index.html'
 	};
 };
