--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/resources/templates/menu.html.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/resources/templates/menu.html.template
@@ -46,7 +46,7 @@
 				<a href=""><span class="fa fa-user user"></span> <span class="user" ng-bind="user.name"></span>&nbsp;</a>
 			  </li>
 			  <li class="hidden-xs">
-				<a href="/logout"><span class="fa fa-power-off"></span></a>
+				<a href="#" ng-click="logout()"><span class="fa fa-power-off"></span></a>
 			  </li>
 			</ul>
 		</div>
